JG-2002-12-12-0  Cleanup:   More general handling for code deleting from 
                            ranges in job handling.
                            Removed unneccessary and expensive range handling 
                            in job_enroll().
                            Improved (example scheduler) simple_scheduler.

EB-2002-12-11-1  Bugfix:    Eleminated compilation warnings for architecture
                            glinux in combination with gcc 3.2

EB-2002-12-11-0  Bugfix:    job logging file exists but is empty in certain
                            configurations
                 IZ:        #439
                 Bugtraq:   #4791908
                 Review:    AS

JG-2002-12-10-0  Enhancem.: Create separate libraries for different spooling
                            methods.
                 Bugfix:    Fixed broken build for creation of shared SGE libs.

EB-2002-12-09-0  Bugfix:    qstat -j shows messages concerning queues although 
                            schedd_job_info=false
                            sge_schedd process consumes more memory than needed
                            if schedd_job_info=true
                            Job notification signals won't be delivered if 
                            user redefines suspend_method or terminate_method
                 IZ:        #432 #435 #436
                 Bugtraq:   #4787598 #4790540 #4790547
                 Review:    JG

CR-2002-12-09-1  Testsuite: migration test now L10N compatible

CR-2002-12-09-0  Testsuite: Removing evtl. existing access lists in 
                            install_core_system check 

CR-2002-12-06-2  Testsuite: Fixed bug in submit_del test ( running on system
                 Bugfix:    with large queue count will report errors on 
                            starup )

CR-2002-12-06-1  Testsuite: Fixed bug in access_lists test for sge systems
                 Bugfix:

CR-2002-12-06-0  Testsuite: - Setting shared library path in start_remote_prog()